Working with folder and files size/count
Get largest folder's size
Get largest folder's count
Get folders over defined size
Get files over defined size

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 .ipynb_checkpoints/Working with files-checkpoint.ipynb
 .ipynb_checkpoints/stripRegex-checkpoint.ipynb
+.ipynb_checkpoints/07. backupToZip-checkpoint.ipynb
+.ipynb_checkpoints/06. renameDates-checkpoint.ipynb
+.ipynb_checkpoints/09. maxFolderSize-checkpoint.ipynb
+.ipynb_checkpoints/Chapter 9 - Organizing Files-checkpoint.ipynb
+08. Backup selected files/.ipynb_checkpoints/backUp_selected_files-checkpoint.ipynb
