--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 .ipynb_checkpoints/09. maxFolderSize-checkpoint.ipynb
 .ipynb_checkpoints/Chapter 9 - Organizing Files-checkpoint.ipynb
 08. Backup selected files/.ipynb_checkpoints/backUp_selected_files-checkpoint.ipynb
+.ipynb_checkpoints/10. Debugging-checkpoint.ipynb
