--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 .ipynb_checkpoints/Chapter 9 - Organizing Files-checkpoint.ipynb
 08. Backup selected files/.ipynb_checkpoints/backUp_selected_files-checkpoint.ipynb
 .ipynb_checkpoints/10. Debugging-checkpoint.ipynb
+.ipynb_checkpoints/mp3 copier-checkpoint.ipynb
+05-2. Mad Libs/.ipynb_checkpoints/madLibs-checkpoint.ipynb
+05-3. Regex Search/.ipynb_checkpoints/Regex Search-checkpoint.ipynb
